@@ -1,5 +1,5 @@
 {% extends "admin/change_list.html" %}
-{% load admin_static %}
+{% load static %}
 
 
 {% block extrastyle %}{{ block.super }}
